# WolkConnect-Cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LicenceHeader  README.md  RELEASE_NOTES.txt  configure-dev.sh  configure.sh  manage-units.pkla
.github/workflows/: cmake-build-and-test.yml
cmake/: clang-format.cmake
debian/: changelog  control  copyright  rules
dependencies/: make.sh
doc/html/: Version_8h_source.html  WolkBuilder_8h_source.html  Wolk_8h_source.html  _r_e_a_d_m_e_8md.html  _version_8h.html  _version_8h_source.html  _wolk_8cpp.html  _wolk_8h.html  _wolk_8h_source.html  _wolk_builder_8cpp.html  _wolk_builder_8h.html  _wolk_builder_8h_source.html  _wolk_connect-_functional-_documentation_8md.html  annotated.html  classes.html  classwolkabout_1_1Wolk-members.html  classwolkabout_1_1Wolk.html  classwolkabout_1_1WolkBuilder-members.html  classwolkabout_1_1WolkBuilder.html  classwolkabout_1_1_wolk-members.html  classwolkabout_1_1_wolk.html  classwolkabout_1_1_wolk_1_1_connectivity_facade-members.html  classwolkabout_1_1_wolk_1_1_connectivity_facade.html  classwolkabout_1_1_wolk_builder-members.html  classwolkabout_1_1_wolk_builder.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples_2full__feature__set_2_r_e_a_d_m_e_8md.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  md_README.html  md_examples_full_feature_set_README.html  namespacemembers.html  (+4 more)
doc/latex/: _version_8h.tex  _wolk_8cpp.tex  _wolk_8h.tex  _wolk_builder_8cpp.tex  _wolk_builder_8h.tex  annotated.tex  classwolkabout_1_1Wolk.tex  classwolkabout_1_1WolkBuilder.tex  classwolkabout_1_1_wolk.tex  classwolkabout_1_1_wolk_1_1_connectivity_facade.eps  classwolkabout_1_1_wolk_1_1_connectivity_facade.tex  classwolkabout_1_1_wolk_builder.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  md_README.tex  md_examples_full_feature_set_README.tex  namespaces.tex  namespacewolkabout.tex  refman.tex
docs/templates/: DoxygenLayout.xml  WolkConnect-Functional-Documentation.md  new_footer.html  new_stylesheet.css
example/: Application.cpp
examples/debian-package-installation/: Application.cpp
examples/full_feature/: Application.cpp  wolkconnect_full_feature_set.json
examples/full_feature_set/: Application.cpp  README.md  full-example-manifest.json
examples/pull/: Application.cpp  wolkconnect_full_feature_set.json
examples/register_feed_and_attribute/: Application.cpp
examples/simple/: Application.cpp  simple-example-manifest.json  wolkconnect_simple.json
examples/simple_example/: Application.cpp
examples/subdevices/: Application.cpp
src/: CommandBuffer.cpp  CommandBuffer.h  CommandHandlingService.h  ConfigurationHandler.h  ConfigurationProvider.h  ConnectionStatusListener.h  FileDownloadMqttCommandListener.h  FileDownloadMqttService.cpp  FileDownloadMqttService.h  FileDownloadService.cpp  FileDownloadService.h  FileDownloadUrlCommandListener.h  FileDownloadUrlService.cpp  FileDownloadUrlService.h  FileHandler.cpp  FileHandler.h  FirmwareInstaller.h  FirmwareUpdateService.cpp  FirmwareUpdateService.h  InboundMessageHandler.cpp  InboundMessageHandler.h  InboundPlatformMessageHandler.cpp  InboundPlatformMessageHandler.h  OutboundDataService.cpp  OutboundDataService.h  OutboundMessageFactory.cpp  OutboundMessageFactory.h  OutboundServiceDataHandler.h  PublishingService.cpp  PublishingService.h  ServiceCommandHandler.cpp  ServiceCommandHandler.h  UrlFileDownloader.h  Version.h  Wolk.cpp  Wolk.h  WolkBuilder.cpp  WolkBuilder.h  WolkaboutFileDownloader.h
src/api/: ActuationHandler.h  FeedUpdateHandler.h  FirmwareVersionProvider.h  ParameterHandler.h
src/connectivity/: ConnectivityService.cpp  ConnectivityService.h  OutboundMessageFactory.h
src/model/: Actuator.cpp  ActuatorCommand.cpp  ActuatorStatus.cpp  BasicDevice.cpp  BasicDevice.h  BinaryData.cpp  BinaryData.h  ConfigurationCommand.cpp  ConfigurationCommand.h  Device.cpp  Device.h  FileDownloadMqttCommand.cpp  FileDownloadMqttCommand.h  FileDownloadMqttResponse.cpp  FileDownloadMqttResponse.h  FileDownloadUrlCommand.cpp  FileDownloadUrlCommand.h  FileDownloadUrlResponse.cpp  FileDownloadUrlResponse.h  FilePacketRequest.cpp  FilePacketRequest.h  FirmwareUpdateCommand.cpp  FirmwareUpdateCommand.h  FirmwareUpdateResponse.cpp  FirmwareUpdateResponse.h  ManifestItem.cpp  OutboundMessage.cpp  OutboundMessage.h  Reading.cpp  Sensor.cpp  WolkOptional.h
src/mqtt/: MqttConnectivityService.cpp  MqttConnectivityService.h
src/persistence/: Persistence.h
src/repository/: SQLiteFileRepository.cpp  SQLiteFileRepository.h
src/service/: BinaryDataListener.h  DataService.cpp  DataService.h  FileDownloadService.cpp  FileDownloadService.h  FirmwareInstaller.h  FirmwareUpdateCommandListener.h  FirmwareUpdateService.cpp  FirmwareUpdateService.h  KeepAliveService.cpp  KeepAliveService.h  UrlFileDownloader.h
src/utilities/: ByteUtils.cpp  ByteUtils.h  FileSystemUtils.cpp  FileSystemUtils.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h
tests/: DataServiceTests.cpp  DeviceTests.cpp  ErrorServiceTests.cpp  ExampleTest.cpp  FileManagementServiceTests.cpp  FileTransferSessionTests.cpp  FirmwareUpdateServiceTests.cpp  InboundPlatformMessageHandlerTests.cpp  KeepAliveServiceTests.cpp  PlatformStatusServiceTests.cpp  RegistrationServiceTests.cpp  SQLiteFileRepositoryTests.cpp  WolkBuilderTests.cpp  WolkMultiTests.cpp  WolkPahoMqttClientTests.cpp  WolkSingleTests.cpp  WolkTests.cpp
tests/mocks/: ActuationHandlerMock.h  ActuatorStatusProviderMock.h  ConfigurationHandlerMock.h  ConfigurationProviderMock.h  ConnectivityServiceMock.h  DataProtocolMock.h  DataServiceMock.h  (+27 more)
tools/: coverage.sh  make_deb.sh  make_release.sh  make_zip.sh
wolk/: InboundPlatformMessageHandler.cpp  InboundPlatformMessageHandler.h  Version.h  Wolk.cpp  Wolk.h  WolkBuilder.cpp  WolkBuilder.h  WolkInterface.cpp  WolkInterface.h  WolkInterfaceType.h  WolkMulti.cpp  WolkMulti.h  WolkSingle.cpp  WolkSingle.h
(+111 files in other folders)
